bin/tests/snapshots/manual_inherit_from__fix_8469aedc88bfd1e6301d53e1233a35b1025094e3cde4646b7a275bdf197056d5.snap
---
source: bin/tests/manual_inherit_from.rs
expression: "\"let foo = { }; in { x = foo.x or \\\"\\\"; }\""
---

