bin/tests/snapshots/manual_inherit_from__fix_fddffc3b779f8727d3ce7613925d3d3df2bc6cc9a30841fe104e26219ed72187.snap
---
source: bin/tests/manual_inherit_from.rs
expression: "\"let a.b = 2; in { c = a.c; }\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let a.b = 2; in { c = a.c; }
+let a.b = 2; in { inherit (a) c; }
